# chat

./: .gitignore  CMakeLists.txt  README.md
include/: chat_client.h  chat_common.h  chat_server.h  message.h  terminal.h
src/: chat.cpp  chat_client.cpp  chat_common.cpp  chat_server.cpp  client.cpp  message.cpp  server.cpp  terminal.cpp
test/: test_message.cpp
